--- a/crud-mvvm-xamarin-android.Frontend/Resources/layout/activity_create_category.xml
+++ b/crud-mvvm-xamarin-android.Frontend/Resources/layout/activity_create_category.xml
@@ -13,7 +13,7 @@
         android:padding="10dp">
 
         <EditText
-            android:id="@+id/inpNameCategory"
+            android:id="@+id/etName_CreateCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -37,7 +37,7 @@
         >
 
         <Button
-            android:id="@+id/btnAccept_Category"
+            android:id="@+id/btnAccept_CreateCategory"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:text="Accept"
@@ -45,7 +45,7 @@
             android:layout_marginEnd="8dp" />
 
         <Button
-            android:id="@+id/btnCancel_Category"
+            android:id="@+id/btnCancel_CreateCategory"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
